# portfolio-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.render  Makefile  docker-compose.yml  dockerignore  pyproject.toml  render.yaml  vercel.json
<built-in function dir>/: chroma.sqlite3
app/: main.py
app/api/v1/endpoints/: rag.py
app/core/: config.py  logging.py
app/schemas/: rag.py
app/services/: chat.py  id_generator.py  llm.py  prompt.py  rag.py  session.py  vector_store.py
script/: ingest.py
vector_store/chroma_db/: chroma.sqlite3  chroma.sqlite3.corrupt.1761047631
vector_store/chroma_db_2/: chroma.sqlite3
vector_store/chroma_db_3/: chroma.sqlite3
